Fixed jumpy scrolling from nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ b
 
 .img-responsive
 {
-	margin-top: 45px;
+	margin-top: 35px;
 }
 
 .jumbotron
